src/y.output
Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: INT
    3    | STRING
    4    | NIL
    5    | lvalue
    6    | exp PLUS exp
    7    | exp MINUS exp
    8    | exp TIMES exp
    9    | exp DIVIDE exp
   10    | exp EQ exp
   11    | exp NEQ exp
   12    | exp LT exp
   13    | exp LE exp
   14    | exp GT exp
   15    | exp GE exp
   16    | exp AND exp
   17    | exp OR exp
   18    | MINUS exp
   19    | lvalue ASSIGN exp
   20    | id LPAREN exprlist RPAREN
   21    | id LPAREN RPAREN
   22    | LPAREN exprseq RPAREN
   23    | LPAREN RPAREN
   24    | id LBRACE fieldlist RBRACE
   25    | id LBRACE RBRACE
   26    | id LBRACK exp RBRACK OF exp
   27    | BREAK
   28    | IF exp THEN exp
   29    | IF exp THEN exp ELSE exp
   30    | WHILE exp DO exp
   31    | FOR id ASSIGN exp TO exp DO exp
   32    | LET declist IN exprseq END
   33    | LET declist IN END

   34 exprlist: exp
   35         | exp COMMA exprlist

   36 exprseq: exp
   37        | exp SEMICOLON exprseq

   38 lvalue: id
   39       | lvalue DOT id
   40       | lvalue LBRACK exp RBRACK
   41       | id LBRACK exp RBRACK

   42 fieldlist: id EQ exp
   43          | id EQ exp COMMA fieldlist

   44 declist: dec
   45        | dec declist

   46 dec: typedeclist
   47    | vardec
   48    | funcdeclist

   49 typedeclist: typedec
   50            | typedec typedeclist

   51 typedec: TYPE id EQ typ

   52 typ: id
   53    | LBRACE typefields RBRACE
   54    | LBRACE RBRACE
   55    | ARRAY OF id

   56 typefields: typefield
   57           | typefield COMMA typefields

   58 typefield: id COLON id

   59 vardec: VAR id ASSIGN exp
   60       | VAR id COLON id ASSIGN exp

   61 funcdeclist: funcdec
   62            | funcdec funcdeclist

   63 funcdec: FUNCTION id LPAREN typefields RPAREN EQ exp
   64        | FUNCTION id LPAREN RPAREN EQ exp
   65        | FUNCTION id LPAREN typefields RPAREN COLON id EQ exp
   66        | FUNCTION id LPAREN RPAREN COLON id EQ exp

   67 id: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 67
STRING (259) 3
INT (260) 2
COMMA (261) 35 43 57
COLON (262) 58 60 65 66
SEMICOLON (263) 37
LPAREN (264) 20 21 22 23 63 64 65 66
RPAREN (265) 20 21 22 23 63 64 65 66
LBRACK (266) 26 40 41
RBRACK (267) 26 40 41
LBRACE (268) 24 25 53 54
RBRACE (269) 24 25 53 54
DOT (270) 39
PLUS (271) 6
MINUS (272) 7 18
TIMES (273) 8
DIVIDE (274) 9
EQ (275) 10 42 43 51 63 64 65 66
NEQ (276) 11
LT (277) 12
LE (278) 13
GT (279) 14
GE (280) 15
AND (281) 16
OR (282) 17
ASSIGN (283) 19 31 59 60
ARRAY (284) 55
IF (285) 28 29
THEN (286) 28 29
ELSE (287) 29
WHILE (288) 30
FOR (289) 31
TO (290) 31
DO (291) 30 31
LET (292) 32 33
IN (293) 32 33
END (294) 32 33
OF (295) 26 55
BREAK (296) 27
NIL (297) 4
FUNCTION (298) 63 64 65 66
VAR (299) 59 60
TYPE (300) 51
LOW (301)
UMINUS (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
exp (50)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31 32 33, on right: 1 6 7 8 9 10 11 12
    13 14 15 16 17 18 19 26 28 29 30 31 34 35 36 37 40 41 42 43 59
    60 63 64 65 66
exprlist (51)
    on left: 34 35, on right: 20 35
exprseq (52)
    on left: 36 37, on right: 22 32 37
lvalue (53)
    on left: 38 39 40 41, on right: 5 19 39 40
fieldlist (54)
    on left: 42 43, on right: 24 43
declist (55)
    on left: 44 45, on right: 32 33 45
dec (56)
    on left: 46 47 48, on right: 44 45
typedeclist (57)
    on left: 49 50, on right: 46 50
typedec (58)
    on left: 51, on right: 49 50
typ (59)
    on left: 52 53 54 55, on right: 51
typefields (60)
    on left: 56 57, on right: 53 57 63 65
typefield (61)
    on left: 58, on right: 56 57
vardec (62)
    on left: 59 60, on right: 47
funcdeclist (63)
    on left: 61 62, on right: 48 62
funcdec (64)
    on left: 63 64 65 66, on right: 61 62
id (65)
    on left: 67, on right: 20 21 24 25 26 31 38 39 41 42 43 51 52 55
    58 59 60 63 64 65 66


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    exp      go to state 13
    lvalue   go to state 14
    id       go to state 15


State 1

   67 id: ID .

    $default  reduce using rule 67 (id)


State 2

    3 exp: STRING .

    $default  reduce using rule 3 (exp)


State 3

    2 exp: INT .

    $default  reduce using rule 2 (exp)


State 4

   22 exp: LPAREN . exprseq RPAREN
   23    | LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 16
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      go to state 17
    exprseq  go to state 18
    lvalue   go to state 14
    id       go to state 15


State 5

   18 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 19
    lvalue  go to state 14
    id      go to state 15


State 6

   28 exp: IF . exp THEN exp
   29    | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 20
    lvalue  go to state 14
    id      go to state 15


State 7

   30 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 21
    lvalue  go to state 14
    id      go to state 15


State 8

   31 exp: FOR . id ASSIGN exp TO exp DO exp

    ID  shift, and go to state 1

    id  go to state 22


State 9

   32 exp: LET . declist IN exprseq END
   33    | LET . declist IN END

    FUNCTION  shift, and go to state 23
    VAR       shift, and go to state 24
    TYPE      shift, and go to state 25

    declist      go to state 26
    dec          go to state 27
    typedeclist  go to state 28
    typedec      go to state 29
    vardec       go to state 30
    funcdeclist  go to state 31
    funcdec      go to state 32


State 10

   27 exp: BREAK .

    $default  reduce using rule 27 (exp)


State 11

    4 exp: NIL .

    $default  reduce using rule 4 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 33


State 13

    1 program: exp .
    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37
    EQ      shift, and go to state 38
    NEQ     shift, and go to state 39
    LT      shift, and go to state 40
    LE      shift, and go to state 41
    GT      shift, and go to state 42
    GE      shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45

    $default  reduce using rule 1 (program)


State 14

    5 exp: lvalue .
   19    | lvalue . ASSIGN exp
   39 lvalue: lvalue . DOT id
   40       | lvalue . LBRACK exp RBRACK

    LBRACK  shift, and go to state 46
    DOT     shift, and go to state 47
    ASSIGN  shift, and go to state 48

    $default  reduce using rule 5 (exp)


State 15

   20 exp: id . LPAREN exprlist RPAREN
   21    | id . LPAREN RPAREN
   24    | id . LBRACE fieldlist RBRACE
   25    | id . LBRACE RBRACE
   26    | id . LBRACK exp RBRACK OF exp
   38 lvalue: id .
   41       | id . LBRACK exp RBRACK

    LPAREN  shift, and go to state 49
    LBRACK  shift, and go to state 50
    LBRACE  shift, and go to state 51

    $default  reduce using rule 38 (lvalue)


State 16

   23 exp: LPAREN RPAREN .

    $default  reduce using rule 23 (exp)


State 17

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp
   36 exprseq: exp .
   37        | exp . SEMICOLON exprseq

    SEMICOLON  shift, and go to state 52
    PLUS       shift, and go to state 34
    MINUS      shift, and go to state 35
    TIMES      shift, and go to state 36
    DIVIDE     shift, and go to state 37
    EQ         shift, and go to state 38
    NEQ        shift, and go to state 39
    LT         shift, and go to state 40
    LE         shift, and go to state 41
    GT         shift, and go to state 42
    GE         shift, and go to state 43
    AND        shift, and go to state 44
    OR         shift, and go to state 45

    $default  reduce using rule 36 (exprseq)


State 18

   22 exp: LPAREN exprseq . RPAREN

    RPAREN  shift, and go to state 53


State 19

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp
   18    | MINUS exp .

    $default  reduce using rule 18 (exp)


State 20

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp
   28    | IF exp . THEN exp
   29    | IF exp . THEN exp ELSE exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37
    EQ      shift, and go to state 38
    NEQ     shift, and go to state 39
    LT      shift, and go to state 40
    LE      shift, and go to state 41
    GT      shift, and go to state 42
    GE      shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45
    THEN    shift, and go to state 54


State 21

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp
   30    | WHILE exp . DO exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37
    EQ      shift, and go to state 38
    NEQ     shift, and go to state 39
    LT      shift, and go to state 40
    LE      shift, and go to state 41
    GT      shift, and go to state 42
    GE      shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45
    DO      shift, and go to state 55


State 22

   31 exp: FOR id . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 56


State 23

   63 funcdec: FUNCTION . id LPAREN typefields RPAREN EQ exp
   64        | FUNCTION . id LPAREN RPAREN EQ exp
   65        | FUNCTION . id LPAREN typefields RPAREN COLON id EQ exp
   66        | FUNCTION . id LPAREN RPAREN COLON id EQ exp

    ID  shift, and go to state 1

    id  go to state 57


State 24

   59 vardec: VAR . id ASSIGN exp
   60       | VAR . id COLON id ASSIGN exp

    ID  shift, and go to state 1

    id  go to state 58


State 25

   51 typedec: TYPE . id EQ typ

    ID  shift, and go to state 1

    id  go to state 59


State 26

   32 exp: LET declist . IN exprseq END
   33    | LET declist . IN END

    IN  shift, and go to state 60


State 27

   44 declist: dec .
   45        | dec . declist

    FUNCTION  shift, and go to state 23
    VAR       shift, and go to state 24
    TYPE      shift, and go to state 25

    $default  reduce using rule 44 (declist)

    declist      go to state 61
    dec          go to state 27
    typedeclist  go to state 28
    typedec      go to state 29
    vardec       go to state 30
    funcdeclist  go to state 31
    funcdec      go to state 32


State 28

   46 dec: typedeclist .

    $default  reduce using rule 46 (dec)


State 29

   49 typedeclist: typedec .
   50            | typedec . typedeclist

    TYPE  shift, and go to state 25

    $default  reduce using rule 49 (typedeclist)

    typedeclist  go to state 62
    typedec      go to state 29


State 30

   47 dec: vardec .

    $default  reduce using rule 47 (dec)


State 31

   48 dec: funcdeclist .

    $default  reduce using rule 48 (dec)


State 32

   61 funcdeclist: funcdec .
   62            | funcdec . funcdeclist

    FUNCTION  shift, and go to state 23

    $default  reduce using rule 61 (funcdeclist)

    funcdeclist  go to state 63
    funcdec      go to state 32


State 33

    0 $accept: program $end .

    $default  accept


State 34

    6 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 64
    lvalue  go to state 14
    id      go to state 15


State 35

    7 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 65
    lvalue  go to state 14
    id      go to state 15


State 36

    8 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 66
    lvalue  go to state 14
    id      go to state 15


State 37

    9 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 67
    lvalue  go to state 14
    id      go to state 15


State 38

   10 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 68
    lvalue  go to state 14
    id      go to state 15


State 39

   11 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 69
    lvalue  go to state 14
    id      go to state 15


State 40

   12 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 70
    lvalue  go to state 14
    id      go to state 15


State 41

   13 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 71
    lvalue  go to state 14
    id      go to state 15


State 42

   14 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 72
    lvalue  go to state 14
    id      go to state 15


State 43

   15 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 73
    lvalue  go to state 14
    id      go to state 15


State 44

   16 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 74
    lvalue  go to state 14
    id      go to state 15


State 45

   17 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 75
    lvalue  go to state 14
    id      go to state 15


State 46

   40 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 76
    lvalue  go to state 14
    id      go to state 15


State 47

   39 lvalue: lvalue DOT . id

    ID  shift, and go to state 1

    id  go to state 77


State 48

   19 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 78
    lvalue  go to state 14
    id      go to state 15


State 49

   20 exp: id LPAREN . exprlist RPAREN
   21    | id LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 79
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp       go to state 80
    exprlist  go to state 81
    lvalue    go to state 14
    id        go to state 15


State 50

   26 exp: id LBRACK . exp RBRACK OF exp
   41 lvalue: id LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 82
    lvalue  go to state 14
    id      go to state 15


State 51

   24 exp: id LBRACE . fieldlist RBRACE
   25    | id LBRACE . RBRACE

    ID      shift, and go to state 1
    RBRACE  shift, and go to state 83

    fieldlist  go to state 84
    id         go to state 85


State 52

   37 exprseq: exp SEMICOLON . exprseq

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      go to state 17
    exprseq  go to state 86
    lvalue   go to state 14
    id       go to state 15


State 53

   22 exp: LPAREN exprseq RPAREN .

    $default  reduce using rule 22 (exp)


State 54

   28 exp: IF exp THEN . exp
   29    | IF exp THEN . exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 87
    lvalue  go to state 14
    id      go to state 15


State 55

   30 exp: WHILE exp DO . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 88
    lvalue  go to state 14
    id      go to state 15


State 56

   31 exp: FOR id ASSIGN . exp TO exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 89
    lvalue  go to state 14
    id      go to state 15


State 57

   63 funcdec: FUNCTION id . LPAREN typefields RPAREN EQ exp
   64        | FUNCTION id . LPAREN RPAREN EQ exp
   65        | FUNCTION id . LPAREN typefields RPAREN COLON id EQ exp
   66        | FUNCTION id . LPAREN RPAREN COLON id EQ exp

    LPAREN  shift, and go to state 90


State 58

   59 vardec: VAR id . ASSIGN exp
   60       | VAR id . COLON id ASSIGN exp

    COLON   shift, and go to state 91
    ASSIGN  shift, and go to state 92


State 59

   51 typedec: TYPE id . EQ typ

    EQ  shift, and go to state 93


State 60

   32 exp: LET declist IN . exprseq END
   33    | LET declist IN . END

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    END     shift, and go to state 94
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      go to state 17
    exprseq  go to state 95
    lvalue   go to state 14
    id       go to state 15


State 61

   45 declist: dec declist .

    $default  reduce using rule 45 (declist)


State 62

   50 typedeclist: typedec typedeclist .

    $default  reduce using rule 50 (typedeclist)


State 63

   62 funcdeclist: funcdec funcdeclist .

    $default  reduce using rule 62 (funcdeclist)


State 64

    6 exp: exp . PLUS exp
    6    | exp PLUS exp .
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37

    $default  reduce using rule 6 (exp)


State 65

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    7    | exp MINUS exp .
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37

    $default  reduce using rule 7 (exp)


State 66

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    8    | exp TIMES exp .
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    $default  reduce using rule 8 (exp)


State 67

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
    9    | exp DIVIDE exp .
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    $default  reduce using rule 9 (exp)


State 68

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   10    | exp EQ exp .
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 10 (exp)


State 69

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   11    | exp NEQ exp .
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 11 (exp)


State 70

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   12    | exp LT exp .
   13    | exp . LE exp
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 12 (exp)


State 71

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   13    | exp LE exp .
   14    | exp . GT exp
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 13 (exp)


State 72

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | exp . EQ exp
   11    | exp . NEQ exp
   12    | exp . LT exp
   13    | exp . LE exp
   14    | exp . GT exp
   14    | exp GT exp .
   15    | exp . GE exp
   16    | exp . AND exp
   17    | exp . OR exp

    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    TIMES   shift, and go to state 36
    DIVIDE  shift, and go to state 37

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 14 (exp)


State 73
